--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Basic/.DS_Store
 Pods/.DS_Store
 Basic/.DS_Store
 .DS_Store
+Basic/.DS_Store
+Basic/Assets.xcassets/.DS_Store
+Basic/.DS_Store
+.DS_Store
